--- a/arch/arm/configs/alucard_defconfig
+++ b/arch/arm/configs/alucard_defconfig
@@ -538,6 +538,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MSM_CPU_PWRCTL=y
 CONFIG_SEC_THERMISTOR=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_SEC_FACTORY is not set
 
 #
@@ -2984,6 +2985,7 @@ CONFIG_USB_QCOM_DIAG_BRIDGE=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE_TEST is not set
 CONFIG_USB_QCOM_MDM_BRIDGE=y
 CONFIG_USB_QCOM_KS_BRIDGE=y
+# CONFIG_USB_QCOM_IPC_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 CONFIG_USB_GADGET_DEBUG_FILES=y
